:wrench: fix font size on mobile

--- a/src/components/ToDo.module.css
+++ b/src/components/ToDo.module.css
@@ -97,5 +97,6 @@
 @media (max-width: 768px) {
     .box {
         padding: 0 1rem;
+        font-size: 87.5%;
     }
 }
